--- a/css/main.css
+++ b/css/main.css
@@ -517,7 +517,7 @@ zam-icon {
 
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
-    transition: background-color 0s 600000s, color 0s 600000s !important;
+    transition: background-color 0s 0s, color 0s 0s;
 }
 
 .LoginButton {
