fix sidebar async

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -37,7 +37,7 @@
             <h1 id="SidebarAccTitle">Caricamento...</h1>
             <h1 id="SidebarAccDesc">Gestione Account</h1>
         </div>
-        <button onclick="LogOut()" id="EsciAccount">
+        <button onclick="ZAMSidebar.logOut()" id="EsciAccount">
             <h1>Esci</h1>
         </button>
     </button>
