--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -19,7 +19,7 @@
         <img src="svg/Groups.svg" style="width:29px;height:auto;"/>
         <h1 id="SidebarText">Gestione Prenotazioni</h1>
     </button>
-    <button onclick="Helpers.redir('./wip.html')" zam-conditional="gest" id="PulsanteIcona">
+    <button onclick="Helpers.redir('./assets.html')" zam-conditional="gest" id="PulsanteIcona">
         <img src="svg/Edit.svg" style="width:29px;height:auto;"/>
         <h1 id="SidebarText">Gestione Assets</h1>
     </button>
@@ -35,7 +35,7 @@
         <img id="SidebarAccIcon" src = "svg/Account.svg" style="width:auto;height:29px;"/>
         <div id="Sidebar-Account">
             <h1 id="SidebarAccTitle">Caricamento...</h1>
-            <h1 id="SidebarAccDesc">Gestione Account</h1>
+            <h1 id="SidebarAccDesc"><a href="./account.html">Gestione Account &gt;</a></h1>
         </div>
         <button onclick="ZAMSidebar.logOut()" id="EsciAccount">
             <h1>Esci</h1>
