--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@
     --RossoScuro: #640000;
     --RossoScurissimo: rgb(31, 0, 0);
     --Verde: #02AF16;
+    --VerdeScuro: #005c0b;
 
     --BiancoTrasparente: #ffffff21;
     --ContornoTrasparente: #ffffff69;
@@ -1206,4 +1207,45 @@ zam-picker {
 
 .row_modifica {
     gap: 10px !important;
+}
+
+.disable-button {
+    display: flex;
+    flex-direction: row;
+
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+
+    width: 200px;
+    height: 50px;
+
+    font-size: large;
+
+    background-color: var(--Rosso);
+    color: white;
+
+    border: none;
+    border-radius: 100px;
+
+    position: absolute;
+    left: calc(50% - 100px);
+    bottom: 5%;
+
+    cursor: pointer;
+
+    transition: background-color ease-in-out 0.25s;
+}
+
+.disable-button[_disabled] {
+    background-color: var(--Verde);
+}
+
+.disable-button:hover {
+    background-color: var(--RossoScuro);
+}
+
+.disable-button[_disabled]:hover {
+    background-color: var(--VerdeScuro);
 }
